fix tests: adjust to immutable sets or revert to previous approach